--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -1,19 +1,65 @@
 {% extends 'base.html' %} {% block content %}
 
 <h3> Add Book </h3>
-
 <div class="row">
-    <form  action="" method="POST" class="col s12">
+    <form action="{{ url_for('insert_book') }}" method="POST" class="col s12">
+        <div class='row'>
+            <div class="input-field col s12">
+    <select>
+      <option value="" disabled selected>Choose your Genre</option>
+       {% for cat in categories %}
+                     <option value="{{cat.book_genre}}">{{cat.book_genre}}</option>
+                  {% endfor %}
+    </select>
+    <label>Select Genre</label>
+  </div>
+        </div>
         <div class="row">
-            <div class="input-field col s6">
-                <i class="material-icons prefix">account_circle</i>
-                <input id="icon_prefix" type="text" class="validate">
-                <label for="icon_prefix">First Name</label>
+            <div class="input-field col s12">
+                <i class="material-icons prefix">book</i>
+                <input id="book_name" name='book_name' type="text" class="validate">
+                <label for="book_name">Book Title</label>
             </div>
-            <div class="input-field col s6">
-                <i class="material-icons prefix">phone</i>
-                <input id="icon_telephone" type="tel" class="validate">
-                <label for="icon_telephone">Telephone</label>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">face</i>
+                    <input id="book_author" name="book_author" type="text" class="validate">
+                    <label for="book_author">Author</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">description</i>
+                    <textarea id="book_descrip" name="book_descrip" class="validate"></textarea>
+                    <label for="book_descrip">Description</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">rate_review</i>
+                    <textarea id="book_review" name="book_review" class="validate"></textarea>
+                    <label for="book_review">Review</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">link</i>
+                    <input id="cover_link" name="cover_link" type="text" class="validate">
+                    <label for="cover_link">Cover Link</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">link</i>
+                    <input id="purch_link" name="purch_link" type="text" class="validate">
+                    <label for="purch_link">Purchase Link</label>
+                </div>
+            </div>
+            <div class="row">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Add Book
+                <i class="material-icons right">playlist_add</i>
+              </button>
+        
             </div>
         </div>
     </form>
