--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,11 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+      $('select').material_select();
+        });
 
+</script>
 </body>
 </html>
