--- a/templates/books.html
+++ b/templates/books.html
@@ -1,18 +1,20 @@
 {% extends 'base.html' %} {% block content %}
 
 <div class="row">
-   {% for book in books %}
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title">{{book.book_name}} - {{book.book_author}}</span>
-          <p> <strong> {{book.book_genre}}</strong> -  {{book.book_descrip}} -  {{book.book_review}} </p>
-        </div>
-        <div class="card-action">
-          <a href={{book.purch_link}}>Buy Me!</a>
-          <a href={{book.cover_link}}>Cover Image</a>
-        </div>
+  {% for book in books %}
+  <div class="card blue-grey darken-1">
+    <div class="card-content white-text">
+      <span class="card-title">{{book.book_name}} - {{book.book_author}}</span>
+      <p> <strong> {{book.book_genre}}</strong> - {{book.book_descrip}} - {{book.book_review}} </p>
     </div>
-    {% endfor %}
+    <div class="card-action col-sm4">
+      <a href={{book.purch_link}}>Buy Me!</a>
+      <a href={{book.cover_link}}>Cover Image</a>
+      <a href="{{url_for('edit_book', book_id=book._id)}}">Edit</a>
+      <a href={{book.purch_link}}>Delete</a>
+    </div>
   </div>
+  {% endfor %}
+</div>
     
 {% endblock %}
