--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css"/>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="{{url_for('get_books')}}" class="brand-logo">Book Store</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="{{url_for('get_books')}}">Home</a></li>
+                    <li><a href="{{url_for('add_book')}}">New Book</a></li>
+                    <li><a href="{{url_for('get_categories')}}">Manage Categories</a></li>
+                </ul>
+                <ul class="side-nav" id="mobile-demo">
+                    <li><a href="{{url_for('get_books')}}">Home</a></li>
+                    <li><a href="{{url_for('add_book')}}">New Task</a></li>
+                    <li><a href="{{url_for('get_categories')}}">Manage Categories</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <div class="container">
     {% block content %}
     {% endblock %}
