--- a/templates/books.html
+++ b/templates/books.html
@@ -11,7 +11,7 @@
       <a href={{book.purch_link}}>Buy Me!</a>
       <a href={{book.cover_link}}>Cover Image</a>
       <a href="{{url_for('edit_book', book_id=book._id)}}">Edit</a>
-      <a href={{book.purch_link}}>Delete</a>
+      <a href={{url_for('delete_book', book_id=book._id)}}>Delete</a>
     </div>
   </div>
   {% endfor %}
