--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -8,7 +8,7 @@
     <select>
       <option value="" disabled selected>Choose your Genre</option>
        {% for cat in categories %}
-                     <option value="{{cat.book_genre}}">{{cat.book_genre}}</option>
+                     <option value="{{cat.category_name}}">{{cat.category_name}}</option>
                   {% endfor %}
     </select>
     <label>Select Genre</label>
