--- a/templates/base.html
+++ b/templates/base.html
@@ -15,13 +15,13 @@
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{url_for('get_books')}}">Home</a></li>
-                    <li><a href="{{url_for('add_book')}}">New Book</a></li>
-                    <li><a href="{{url_for('get_categories')}}">Manage Categories</a></li>
+                    <li><a href="{{url_for('add_book')}}">Add Book</a></li>
+                    <li><a href="{{url_for('get_categories')}}">Genres</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li><a href="{{url_for('get_books')}}">Home</a></li>
-                    <li><a href="{{url_for('add_book')}}">New Task</a></li>
-                    <li><a href="{{url_for('get_categories')}}">Manage Categories</a></li>
+                    <li><a href="{{url_for('add_book')}}">Add Book</a></li>
+                    <li><a href="{{url_for('get_categories')}}">Genres</a></li>
                 </ul>
             </div>
         </nav>
@@ -37,6 +37,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
       $('select').material_select();
+      $(".button-collapse").sideNav();
         });
 
 </script>
