--- a/templates/categories.html
+++ b/templates/categories.html
@@ -11,12 +11,14 @@
       <span class="card-title">{{category.category_name}}</span>
     </div>
     <div class="card-action col-sm4">
-      <a href="" class="waves-effect waves-light btn btn_small">Delete</a>
+      <a href="{{url_for('delete_category', category_id=category._id)}} " class="waves-effect waves-light btn btn_small">Delete</a>
       <a href="{{url_for('edit_category', category_id=category._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
       </div>
   </div>
   {% endfor %}
 </div>
 </div>
-    
+    <div class="row">
+       <a href="{{url_for('add_category')}}" class="waves-effect waves-light btn btn_small blue">Add Category</a>
+    </div>
 {% endblock %}
