added font style

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav">
             <div class="nav-wrapper">
                 <a href="{{url_for('get_books')}}" class="brand-logo">Book Store</a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
