--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 
-<h3> Add Book </h3>
+<h3 class="headings"> Add Book </h3>
 <div class="row">
     <form action="{{ url_for('insert_book') }}" method="POST" class="col s12">
         <div class='row'>
