--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 
 <div class="row">
-<h3>Genre</h3>
+<h3 class="headings">Genre</h3>
 
 
 <div class="row">
