--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 
-<h3> Edit Book </h3>
+<h3 class="headings"> Edit Book </h3>
 <div class="row">
    <form action="{{ url_for('update_book', book_id=book._id) }}" method="POST" class="col s12">
         <div class='row'>
