--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 
-<h3> Edit Genre </h3>
+<h3 class="headings"> Edit Genre </h3>
 <div class="row">
    <form action="{{ url_for('update_category', category_id=category._id)}}" method="POST" class="col s12">
          <div class="row">
