changed form styles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,3 +25,19 @@
      font-family: 'Prata', sans-serif;
      color: orange;
 }
+
+.form {
+    font-family: 'Prata', sans-serif;
+}
+
+.label {
+    font-family: 'Prata', sans-serif;
+}
+
+.input{
+    font-family: 'Prata', sans-serif;
+}
+
+.area {
+    font-family: 'Prata', sans-serif;
+}
