--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -2,61 +2,61 @@
 
 <h3 class="headings"> Add Book </h3>
 <div class="row">
-    <form action="{{ url_for('insert_book') }}" method="POST" class="col s12">
+    <form action="{{ url_for('insert_book') }}" method="POST" class="form col s12">
         <div class='row'>
             <div class="input-field col s12">
     <select>
-      <option value="" disabled selected>Choose your Genre</option>
+      <option class="option" value="" disabled selected>Choose your Genre</option>
        {% for cat in categories %}
-                     <option value="{{cat.category_name}}">{{cat.category_name}}</option>
+                     <option class="option" value="{{cat.category_name}}">{{cat.category_name}}</option>
                   {% endfor %}
     </select>
-    <label>Select Genre</label>
+    <label class="label">Select Genre</label>
   </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">book</i>
-                <input id="book_name" name='book_name' type="text" class="validate">
-                <label for="book_name">Book Title</label>
+                <input class="input" id="book_name" name='book_name' type="text" class="validate">
+                <label class="label" for="book_name">Book Title</label>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">face</i>
-                    <input id="book_author" name="book_author" type="text" class="validate">
-                    <label for="book_author">Author</label>
+                    <input class="input" id="book_author" name="book_author" type="text" class="validate">
+                    <label class="label" for="book_author">Author</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">description</i>
-                    <textarea id="book_descrip" name="book_descrip" class="validate"></textarea>
-                    <label for="book_descrip">Description</label>
+                    <textarea class="area" id="book_descrip" name="book_descrip" class="validate"></textarea>
+                    <label class="label" for="book_descrip">Description</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">rate_review</i>
-                    <textarea id="book_review" name="book_review" class="validate"></textarea>
-                    <label for="book_review">Review</label>
+                    <textarea class="area" id="book_review" name="book_review" class="validate"></textarea>
+                    <label class="label" for="book_review">Review</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">link</i>
-                    <input id="cover_link" name="cover_link" type="text" class="validate">
-                    <label for="cover_link">Cover Link</label>
+                    <input class="input" id="cover_link" name="cover_link" type="text" class="validate">
+                    <label class="label"for="cover_link">Cover Link</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">link</i>
-                    <input id="purch_link" name="purch_link" type="text" class="validate">
-                    <label for="purch_link">Purchase Link</label>
+                    <input class="input" id="purch_link" name="purch_link" type="text" class="validate">
+                    <label class="label" for="purch_link">Purchase Link</label>
                 </div>
             </div>
             <div class="row">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Add Book
+                <button class="btn orange waves-effect waves-light" type="submit" name="action">Add Book
                 <i class="material-icons right">playlist_add</i>
               </button>
         
