--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -2,7 +2,7 @@
 
 <h3 class="headings"> Edit Book </h3>
 <div class="row">
-   <form action="{{ url_for('update_book', book_id=book._id) }}" method="POST" class="col s12">
+   <form action="{{ url_for('update_book', book_id=book._id) }}" method="POST" class="form col s12">
         <div class='row'>
             <div class="input-field col s12">
     <select>
