--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -2,19 +2,19 @@
 
 <h3 class="headings"> Edit Genre </h3>
 <div class="row">
-   <form action="{{ url_for('update_category', category_id=category._id)}}" method="POST" class="col s12">
+   <form class="form" action="{{ url_for('update_category', category_id=category._id)}}" method="POST" class="form col s12">
          <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">poll</i>
-                <input id="category_name" name="category_name" type="text" class="validate" value="{{category.category_name}}">
-                <label for="category_name">Genre</label>
+                <input class="input" id="category_name" name="category_name" type="text" class="validate" value="{{category.category_name}}">
+                <label class="label" for="category_name">Genre</label>
             </div>
         </div>
             <div class="row">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Save changes
+                <button class="btn waves-effect waves-light btn orange" type="submit" name="action">Save changes
                 <i class="material-icons right">playlist_add</i>
               </button>
-             <a href="{{ url_for('get_categories')}}" class="waves-effect waves-light btn grey">
+             <a href="{{ url_for('get_categories')}}" class="waves-effect waves-light btn orange">
                 <i class="material-icons right">cancel</i>Cancel
             </a>
         
