changed button styles and icons

--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -8,7 +8,7 @@
     <select>
       <option class="option" value="" disabled selected>Choose your Genre</option>
        {% for cat in categories %}
-                     <option class="option" value="{{cat.category_name}}">{{cat.category_name}}</option>
+                     <option class="option1" value="{{cat.category_name}}">{{cat.category_name}}</option>
                   {% endfor %}
     </select>
     <label class="label">Select Genre</label>
