--- a/templates/addcategory.html
+++ b/templates/addcategory.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 
-<h3> Add Genre </h3>
+<h3 class="headings"> Add Genre </h3>
 <div class="row">
-   <form action="{{ url_for('insert_category')}}" method="POST" class="col s12">
+   <form class="form" action="{{ url_for('insert_category')}}" method="POST" class="col s12">
          <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">poll</i>
@@ -11,10 +11,10 @@
             </div>
         </div>
             <div class="row">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Add Genre
+                <button class="btn orange waves-effect waves-light" type="submit" name="action">Add Genre
                 <i class="material-icons right">playlist_add</i>
               </button>
-             <a href="{{ url_for('get_categories')}}" class="waves-effect waves-light btn grey">
+             <a href="{{ url_for('get_categories')}}" class="btn orange waves-effect waves-light">
                 <i class="material-icons right">cancel</i>Cancel
             </a>
         
