--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -11,7 +11,7 @@
             </div>
         </div>
             <div class="row">
-                <button class="btn waves-effect waves-light btn orange" type="submit" name="action">Save changes
+                <button class="btn orange waves-effect waves-light" type="submit" name="action">Save changes
                 <i class="material-icons right">playlist_add</i>
               </button>
              <a href="{{ url_for('get_categories')}}" class="waves-effect waves-light btn orange">
