--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -5,10 +5,10 @@
     <form action="{{ url_for('insert_book') }}" method="POST" class="form col s12">
         <div class='row'>
             <div class="input-field col s12">
-    <select>
-      <option class="option" value="" disabled selected>Choose your Genre</option>
+    <select id="select">
+      <option value="" disabled selected>Choose your Genre</option>
        {% for cat in categories %}
-                     <option class="option1" value="{{cat.category_name}}">{{cat.category_name}}</option>
+                     <option value="{{cat.category_name}}">{{cat.category_name}}</option>
                   {% endfor %}
     </select>
     <label class="label">Select Genre</label>
