--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -2,16 +2,16 @@
 
 <h3 class="headings"> Edit Book </h3>
 <div class="row">
-   <form action="{{ url_for('update_book', book_id=book._id) }}" method="POST" class="form col s12">
+   <form class="form" action="{{ url_for('update_book', book_id=book._id) }}" method="POST" class="form col s12">
         <div class='row'>
             <div class="input-field col s12">
-    <select>
+    <select id="select">
       <option value="" disabled selected>Choose your Genre</option>
        {% for cat in categories %}
        {% if cat.category_name == book.category_name %}
                      <option value="{{cat.category_name}}" selected > {{cat.category_name}}</option>
                      {% else %}
-                     <option value="{{cat.category_name}}"> {{cat.category_name}}</option>
+                      <option value="{{cat.category_name}}"> {{cat.category_name}}</option>
                      {% endif %}
                   {% endfor %}
     </select>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="row">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Update 
+                <button class="btn orange waves-effect waves-light" type="submit" name="action">Update 
                 <i class="material-icons right">playlist_add</i>
               </button>
         
