--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -14,7 +14,7 @@
                 <button class="btn orange waves-effect waves-light" type="submit" name="action">Save changes
                 <i class="material-icons right">playlist_add</i>
               </button>
-             <a href="{{ url_for('get_categories')}}" class="waves-effect waves-light btn orange">
+             <a href="{{ url_for('get_categories')}}" class="btn orange waves-effect waves-light">
                 <i class="material-icons right">cancel</i>Cancel
             </a>
         
