--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -5,13 +5,13 @@
    <form class="form" action="{{ url_for('update_book', book_id=book._id) }}" method="POST" class="form col s12">
         <div class='row'>
             <div class="input-field col s12">
-    <select id="select">
+    <select id="category" name="category_name" >
       <option value="" disabled selected>Choose your Genre</option>
        {% for cat in categories %}
-       {% if cat.category_name == book.category_name %}
-                     <option value="{{cat.category_name}}" selected > {{cat.category_name}}</option>
+       {% if cat.type == book.category_name %}
+                     <option value="{{cat.type}}" selected > {{cat.type}}</option>
                      {% else %}
-                      <option value="{{cat.category_name}}"> {{cat.category_name}}</option>
+                      <option value="{{cat.type}}" > {{cat.type}}</option>
                      {% endif %}
                   {% endfor %}
     </select>
