--- a/templates/categories.html
+++ b/templates/categories.html
@@ -6,7 +6,7 @@
 
 <div class="row">
   {% for category in categories %}
-  <div class="card blue-grey darken-1">
+  <div class="card grey darken-1">
     <div class="card-content white-text">
       <span class="card-title">{{category.type}}</span>
     </div>
