--- a/templates/base.html
+++ b/templates/base.html
@@ -42,27 +42,22 @@ $(document).ready(function() {
 
 </script>
 
-<footer class="page-footer">
-          <div class="container">
+<footer id="page-footer">
+          <div class="container-foot">
             <div class="row-foot">
               <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
+                <h5 class="white-text">Do you want to buy a book?</h5>
                 <p class="grey-text text-lighten-4">Purchase all your favourite books through my link please!</p>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Affiliate Link</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Instagram</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Snapchat</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://www.amazon.co.uk/books-used-books-textbooks/b?ie=UTF8&node=266239">Affiliate Link</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/">Facebook</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/">Instagram</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://www.snapchat.com/">Snapchat</a></li>
                 </ul>
               </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2014 Copyright Text
             </div>
           </div>
         </footer>
