--- a/templates/register.html
+++ b/templates/register.html
@@ -5,9 +5,9 @@
             <form class='reg' method=POST action="{{ url_for('register')}}">
                 <div class="form-group">
                     <label for="user">Username</label>
-                    <input type="text" class="form-control" name="username" placeholder="Username">
+                    <input type="text" class="validate" name="username" placeholder="Username">
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Register</button>
+                <button type="submit" class="btn orange btn-primary btn-block">Register</button>
             </form>
             <br>
         </div>
