--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
         <div class="col-md-4 col-md-offset-4">
             <form method=POST action="{{ url_for('login') }}">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Username</label>
-                    <input type="text" class="form-control" name="username" placeholder="Username">
+                    <label for="name">Username</label>
+                    <input type="text" class="validate" name="username" placeholder="Username">
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Log In</button>
+                <button type="submit" class="btn orange btn-primary btn-block">Log In</button>
             </form>
             <br>
-            <div>
+            <div class="sign">
                 Don't have an account? <a href="{{ url_for('register') }}">Sign up here</a>.
             </div>
         </div>
