--- a/templates/findbook.html
+++ b/templates/findbook.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 
 <div class="row">
-  {% for cat in categories %}
-  <h3>{{cat.type}}</h3>
+  {% for category in categories %}
+  <h3>{{category.type}}</h3>
   {% endfor %}
 
 <div class="row">
