fixed the empty type in database

--- a/templates/findbook.html
+++ b/templates/findbook.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 
 <div class="row">
-  {% for category in categories %}
-  <h3>{{category.type}}</h3>
+  {% for cat in categories %}
+  <h3>{{cat.type}}</h3>
   {% endfor %}
 
 <div class="row">
@@ -10,13 +10,11 @@
   <div class="card hoverable grey darken-1">
     <div class="card-content white-text">
       <span class="card-title">{{book.book_name}} - {{book.book_author}}</span>
-      <p> - {{book.book_descrip}} - {{book.book_review}} </p>
+      <p> <strong> {{book.category_name}}</strong>- {{book.book_descrip}} - {{book.book_review}} </p>
     </div>
     <div class="card-action col-sm4">
-      <a  href={{book.purch_link}}>Buy Me!</a>
       <a  href={{book.cover_link}}>Cover Image</a>
       <a  href="{{url_for('edit_book', book_id=book._id)}}">Edit</a>
-      <a  href="{{url_for('delete_book', book_id=book._id)}}">Delete</a>
     </div>
   </div>
   {% endfor %}
